--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
         retention-days: 1
 
   generate-allure-report:
-    name: Generate Allure Report
+    name: Generate Allure Report with Trends
     runs-on: ubuntu-latest
     needs: [unit-tests, integration-tests, e2e-tests]
     
@@ -145,6 +145,13 @@ jobs:
       with:
         path: all-results
 
+    - name: Download previous history
+      uses: actions/download-artifact@v4
+      continue-on-error: true
+      with:
+        name: allure-history
+        path: previous-history/
+
     - name: Install Allure
       run: |
         sudo apt-get update
@@ -153,15 +160,52 @@ jobs:
         sudo tar -zxvf allure-2.27.0.tgz -C /opt/
         sudo ln -sf /opt/allure-2.27.0/bin/allure /usr/bin/allure
 
-    - name: Combine and generate Allure report
+    - name: Prepare test results with environment
       run: |
         mkdir -p combined-results
+        
         find all-results -name "*.xml" -exec cp {} combined-results/ \;
-        allure generate combined-results -o allure-report --clean
+        
+        cat > combined-results/environment.properties << EOF
+        BRANCH=${{ github.ref }}
+        COMMIT=${{ github.sha }}
+        RUN_ID=${{ github.run_id }}
+        RUN_NUMBER=${{ github.run_number }}
+        DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+        EVENT=${{ github.event_name }}
+        ACTOR=${{ github.actor }}
+        OS=ubuntu-latest
+        EOF
+        
+        if [ -d "previous-history/history" ]; then
+          mkdir -p combined-results/history
+          cp -r previous-history/history/* combined-results/history/
+          echo "Previous history merged"
+        fi
 
-    - name: Upload Allure report
+    - name: Generate Allure report with trends
+      run: |
+        allure generate combined-results -o allure-report --clean
+        echo "Report generated with trends"
+
+    - name: Prepare history for next run
+      run: |
+        mkdir -p history-artifact
+        if [ -d "allure-report/history" ]; then
+          cp -r allure-report/history history-artifact/
+          echo "History prepared for next run"
+        fi
+
+    - name: Upload Allure report with trends
       uses: actions/upload-artifact@v4
       with:
         name: allure-report
         path: allure-report/
+        retention-days: 30
+
+    - name: Upload history for trends
+      uses: actions/upload-artifact@v4
+      with:
+        name: allure-history
+        path: history-artifact/
         retention-days: 30
