--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,87 +131,74 @@ jobs:
         path: e2e-allure-results/
         retention-days: 1
 
-  generate-allure-report:
-    name: Generate Allure Report with Trends
+    generate-allure-report:
+    name: Generate and Publish Allure Report
     runs-on: ubuntu-latest
     needs: [unit-tests, integration-tests, e2e-tests]
+    if: always()
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.ref }}
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Download all test results
-      uses: actions/download-artifact@v4
-      with:
-        path: all-results
+      - name: Download all test results
+        uses: actions/download-artifact@v4
+        with:
+          path: all-results
 
-    - name: Find and download previous history
-      run: |
-        echo "Searching for previous allure-history artifact..."
-        
-        RUN_ID=$(gh run list --workflow="${{ github.workflow }}" --status=success --limit=1 --json databaseId --jq '.[0].databaseId')
-        
-        if [ -n "$RUN_ID" ]; then
-          echo "Found previous successful run: $RUN_ID"
-          gh run download $RUN_ID --name allure-history --dir previous-history || echo "No history found in previous run"
-        else
-          echo "No previous successful runs found"
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout gh-pages for history
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages
 
-    - name: Install Allure
-      run: |
-        sudo apt-get update
-        sudo apt-get install default-jre wget -y
-        wget -q -O allure-2.27.0.tgz https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
-        sudo tar -zxvf allure-2.27.0.tgz -C /opt/
-        sudo ln -sf /opt/allure-2.27.0/bin/allure /usr/bin/allure
+      - name: Install Allure
+        run: |
+          sudo apt-get update
+          sudo apt-get install default-jre wget -y
+          wget -q -O allure-2.27.0.tgz https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
+          sudo tar -zxvf allure-2.27.0.tgz -C /opt/
+          sudo ln -sf /opt/allure-2.27.0/bin/allure /usr/bin/allure
 
-    - name: Generate report with history
-      run: |
-        mkdir -p combined-results
-        find all-results -name "*.xml" -exec cp {} combined-results/ \;
-        
-        if [ -d "previous-history/history" ]; then
-          echo "Using previous history for trends"
-          mkdir -p combined-results/history
-          cp -r previous-history/history/* combined-results/history/
-        else
-          echo "No previous history found"
-        fi
-        
-        allure generate combined-results -o allure-report --clean
+      - name: Prepare results with history
+        run: |
+          mkdir -p combined-results
+          find all-results -name "*.xml" -exec cp {} combined-results/ \;
+          
+          # Копируем историю из gh-pages если есть
+          if [ -d "gh-pages/history" ]; then
+            echo "Restoring history from gh-pages"
+            mkdir -p combined-results/history
+            cp -r gh-pages/history/* combined-results/history/
+          fi
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v3
+      - name: Generate Allure Report
+        run: |
+          allure generate combined-results -o allure-report --clean
 
-    - name: Upload artifact to GitHub Pages
-      uses: actions/upload-pages-artifact@v2
-      with:
-        path: allure-report
+      - name: Prepare gh-pages content
+        run: |
+          # Очищаем gh-pages и копируем новый отчет
+          rm -rf gh-pages/*
+          cp -r allure-report/* gh-pages/
 
-    - name: Upload history for next run
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-history
-        path: allure-report/history/
-        retention-days: 30
+      - name: Setup Git config
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
-  deploy-to-pages:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: generate-allure-report
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    
-    steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: gh-pages
+          force_orphan: false
+          keep_files: false
+
+      - name: Upload history for future runs
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-history
+          path: gh-pages/history
+          retention-days: 30
