--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,7 @@ jobs:
     name: Generate and Publish Allure Report
     runs-on: ubuntu-latest
     needs: [unit-tests, integration-tests, e2e-tests]
+    if: always()
     
     steps:
       - name: Checkout repo
@@ -145,11 +146,11 @@ jobs:
         with:
           path: all-results
 
-      - name: Create or checkout gh-pages
-        run: |
-          git checkout gh-pages 2>/dev/null || git checkout --orphan gh-pages
-          git reset --hard
-        continue-on-error: true
+      - name: Checkout gh-pages for history
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages
 
       - name: Install Allure
         run: |
@@ -164,24 +165,21 @@ jobs:
           mkdir -p combined-results
           find all-results -name "*.xml" -exec cp {} combined-results/ \;
           
-          if [ -d "history" ]; then
-            echo "Restoring history"
+          if [ -d "gh-pages/history" ]; then
+            echo "Restoring history from gh-pages"
             mkdir -p combined-results/history
-            cp -r history/* combined-results/history/
+            cp -r gh-pages/history/* combined-results/history/
           fi
 
       - name: Generate Allure Report
         run: |
           allure generate combined-results -o allure-report --clean
 
-      - name: Prepare deployment
+      - name: Prepare gh-pages content
         run: |
-          rm -rf *
-          cp -r allure-report/* .
-          
-          if [ ! -f "index.html" ]; then
-            echo '<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0;url=index.html"></head></html>' > index.html
-          fi
+          # Очищаем gh-pages и копируем новый отчет
+          rm -rf gh-pages/*
+          cp -r allure-report/* gh-pages/
 
       - name: Setup Git config
         run: |
@@ -189,9 +187,17 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Deploy to GitHub Pages
-        run: |
-          git add .
-          git commit -m "Deploy Allure report $(date)" || echo "No changes to commit"
-          git push origin gh-pages --force
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: gh-pages
+          force_orphan: false
+          keep_files: false
+
+      - name: Upload history for future runs
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-history
+          path: gh-pages/history
+          retention-days: 30
