--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
         gotestsum --junitfile allure-results/junit-unit.xml --format standard-verbose -- ./internal/core/service/... ./internal/repository/postgres/reps/... -v -race
 
     - name: Upload unit tests results
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: unit-test-results
@@ -84,11 +85,13 @@ jobs:
         docker rm test-postgres
 
     - name: Check and upload results
+      if: always()
       run: |
         mkdir -p integration-allure-results
         cp shared-results/* integration-allure-results/ 2>/dev/null || echo "No files to copy"
 
     - name: Upload integration tests results
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: integration-test-results
@@ -120,11 +123,13 @@ jobs:
         docker compose -f docker-compose.yml down
 
     - name: Process and upload E2E results
+      if: always()
       run: |
         mkdir -p e2e-allure-results
         cp shared-results/* e2e-allure-results/ 2>/dev/null || echo "No files to copy"
 
     - name: Upload E2E test results
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: e2e-test-results
@@ -142,17 +147,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download all test results
+        if: always()
         uses: actions/download-artifact@v4
         with:
           path: all-results
 
       - name: Checkout gh-pages for history
+        if: always()
         uses: actions/checkout@v4
         with:
           ref: gh-pages
           path: gh-pages
 
       - name: Install Allure
+        if: always()
         run: |
           sudo apt-get update
           sudo apt-get install default-jre wget -y
@@ -161,6 +169,7 @@ jobs:
           sudo ln -sf /opt/allure-2.27.0/bin/allure /usr/bin/allure
 
       - name: Prepare results with history
+        if: always()
         run: |
           mkdir -p combined-results
           find all-results -name "*.xml" -exec cp {} combined-results/ \;
@@ -172,21 +181,24 @@ jobs:
           fi
 
       - name: Generate Allure Report
+        if: always()
         run: |
           allure generate combined-results -o allure-report --clean
 
       - name: Prepare gh-pages content
+        if: always()
         run: |
-          # Очищаем gh-pages и копируем новый отчет
           rm -rf gh-pages/*
           cp -r allure-report/* gh-pages/
 
       - name: Setup Git config
+        if: always()
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
       - name: Deploy to GitHub Pages
+        if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -196,6 +208,7 @@ jobs:
           keep_files: false
 
       - name: Upload history for future runs
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-history
