--- a/Dockerfile.integration_tests
+++ b/Dockerfile.integration_tests
@@ -10,6 +10,6 @@ COPY ./src .
 
 RUN mkdir -p ./internal/database/sql
 
-CMD ["go", "test", "-v", "./internal/integration_tests/..."]
+CMD ["go", "test", "-v", "./internal/integration_tests/... -test.parallel=3 -count=1"]
 
 # , "-cover", "-coverprofile=coverage.out", "-coverpkg=github.com/taucuya/ppo/internal/integration_tests...", 
