--- a/docker-compose.integrationtest.yml
+++ b/docker-compose.integrationtest.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: test_password
       POSTGRES_DB: test_db
     ports:
-      - "5433:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -29,21 +29,16 @@ services:
       - ./allure-results:/app/allure-results
     environment:
       APP_URL: http://localhost:8080
-      DB_HOST: postgres
-      DB_PORT: 5432
       DB_USER: test_user
       DB_PASSWORD: test_password
       DB_NAME: test_db
     command: [
         "sh", "-c",
-        "echo 'Waiting for API to start...' && go test -v ./internal/integration_tests/..."
+        "echo 'Waiting for API to start...' && go test -v ./internal/integration_tests/... -test.parallel=3 -count=1"
       ]
 
 networks:
   app-network:
     driver: bridge
-  test_network:
-    driver: bridge
-
 volumes:
   postgres_data:
