--- a/docker-compose.integrationtest.yml
+++ b/docker-compose.integrationtest.yml
@@ -6,35 +6,44 @@ services:
       POSTGRES_PASSWORD: test_password
       POSTGRES_DB: test_db
     ports:
-      - "${POSTGRES_PORT}:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - "5435:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U test_user -d test_db"]
       interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - app-network
 
+  init-db:
+    build:
+      context: .
+      dockerfile: Dockerfile.integration_tests
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      DB_DSN: postgres://test_user:test_password@postgres:5432/test_db?sslmode=disable
+    command: [
+        "sh", "-c",
+        "echo 'Initializing database...' && 
+         go run init_test_db.go &&
+         echo 'Database initialized successfully'"
+      ]
   tests:
     build:
       context: .
       dockerfile: Dockerfile.integration_tests
     depends_on:
-      - postgres
-    networks:
-      - app-network
-    volumes:
-      - ./allure-results:/app/allure-results
+      init-db:
+        condition: service_completed_successfully
     environment:
-      APP_URL: http://localhost:8080
-      DB_USER: test_user
-      DB_PASSWORD: test_password
-      DB_NAME: test_db
+      DB_DSN: postgres://test_user:test_password@postgres:5432/test_db?sslmode=disable
+      JWT_SECRET: supersecretkey
+      TEST_INSTANCE: 1
+    volumes:
+      - ./allure-results-1:/app/allure-results
     command: [
         "sh", "-c",
-        "echo 'Waiting for API to start...' && go test -v ./internal/integration_tests/... -test.parallel=3 -count=1"
+        "go test -v ./internal/integration_tests/..."
       ]
 
 networks:
