--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline with Allure
 
 on:
   push:
-    branches: [ testing ]
+    branches: [testing]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   unit-tests:
@@ -33,12 +33,23 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.24'
+        go-version: '1.21'
         cache-dependency-path: src/go.sum
 
     - name: Install gotestsum
       run: |
         go install gotest.tools/gotestsum@latest
+
+    - name: Wait for PostgreSQL
+      run: |
+        for i in {1..30}; do
+          if pg_isready -h localhost -p 5432 -U test_user; then
+            echo "PostgreSQL is ready"
+            break
+          fi
+          echo "Waiting for PostgreSQL... attempt $i"
+          sleep 2
+        done
 
     - name: Run unit tests
       working-directory: ./src
@@ -59,43 +70,60 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-tests
 
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_DB: test_db
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5435:5432
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        cache-dependency-path: src/go.sum
 
-    - name: Create shared directory for results
+    - name: Install gotestsum
       run: |
-        mkdir -p shared-results
-        chmod 777 shared-results
+        go install gotest.tools/gotestsum@latest
 
-    - name: Run tests in container with shared volume
+    - name: Wait for PostgreSQL
       run: |
-        docker run -d --name test-postgres -e POSTGRES_USER=test_user -e POSTGRES_PASSWORD=test_password -e POSTGRES_DB=test_db -p 5435:5432 postgres:15-alpine
-        
-        until pg_isready -h localhost -p 5432 -U test_user; do
+        for i in {1..30}; do
+          if pg_isready -h localhost -p 5435 -U test_user; then
+            echo "PostgreSQL is ready"
+            break
+          fi
+          echo "Waiting for PostgreSQL... attempt $i"
           sleep 2
         done
-        
-        docker run --rm --name integration-tests --link test-postgres:postgres -v $(pwd)/shared-results:/results -e DB_DSN="postgres://test_user:test_password@postgres:5432/test_db?sslmode=disable" $(docker build -q -f Dockerfile.integration_tests .) sh -c "mkdir -p /results && gotestsum --junitfile /results/junit-integration.xml --format standard-verbose -- ./internal/integration_tests/... -v -tags=integration"
-        
-        docker stop test-postgres
-        docker rm test-postgres
 
-    - name: Check and upload results
-      if: always()
+    - name: Run integration tests
+      working-directory: ./src
+      env:
+        DB_DSN: "postgres://test_user:test_password@localhost:5435/test_db?sslmode=disable"
       run: |
-        mkdir -p integration-allure-results
-        cp shared-results/* integration-allure-results/ 2>/dev/null || echo "No files to copy"
+        mkdir -p allure-results
+        gotestsum --junitfile allure-results/junit-integration.xml --format standard-verbose -- ./internal/integration_tests/... -v -tags=integration
 
     - name: Upload integration tests results
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: integration-test-results
-        path: integration-allure-results/
+        path: src/allure-results/
         retention-days: 1
 
   e2e-tests:
@@ -110,30 +138,41 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Create shared directory for results
-      run: |
-        mkdir -p shared-results
-        chmod 777 shared-results
-
-    - name: Build and run E2E tests with shared volume
+    - name: Start services
       run: |
         docker compose -f docker-compose.yml up -d --build
         sleep 30
-        docker run --rm --network container:$(docker compose -f docker-compose.yml ps -q api) -v $(pwd)/shared-results:/results -e API_URL="http://api:8080" $(docker build -q -f Dockerfile.tests .) sh -c "mkdir -p /results && gotestsum --junitfile /results/junit-e2e.xml --format standard-verbose -- ./internal/e2e_tests/... -v -tags=e2e"
-        docker compose -f docker-compose.yml down
 
-    - name: Process and upload E2E results
+    - name: Wait for API to be ready
+      run: |
+        for i in {1..30}; do
+          if curl -f http://localhost:8080/health > /dev/null 2>&1; then
+            echo "API is ready"
+            break
+          fi
+          echo "Waiting for API... attempt $i"
+          sleep 5
+        done
+
+    - name: Run E2E tests
+      working-directory: ./src
+      env:
+        API_URL: "http://localhost:8080"
+      run: |
+        mkdir -p allure-results
+        gotestsum --junitfile allure-results/junit-e2e.xml --format standard-verbose -- ./internal/e2e_tests/... -v -tags=e2e
+
+    - name: Stop services
       if: always()
       run: |
-        mkdir -p e2e-allure-results
-        cp shared-results/* e2e-allure-results/ 2>/dev/null || echo "No files to copy"
+        docker compose -f docker-compose.yml down
 
     - name: Upload E2E test results
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: e2e-test-results
-        path: e2e-allure-results/
+        path: src/allure-results/
         retention-days: 1
 
   generate-allure-report:
@@ -147,20 +186,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download all test results
-        if: always()
         uses: actions/download-artifact@v4
         with:
           path: all-results
 
-      - name: Checkout gh-pages for history
-        if: always()
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: gh-pages
-
       - name: Install Allure
-        if: always()
         run: |
           sudo apt-get update
           sudo apt-get install default-jre wget -y
@@ -168,49 +198,25 @@ jobs:
           sudo tar -zxvf allure-2.27.0.tgz -C /opt/
           sudo ln -sf /opt/allure-2.27.0/bin/allure /usr/bin/allure
 
-      - name: Prepare results with history
-        if: always()
+      - name: Prepare results
         run: |
           mkdir -p combined-results
+          # Копируем результаты из всех jobs
           find all-results -name "*.xml" -exec cp {} combined-results/ \;
-          
-          if [ -d "gh-pages/history" ]; then
-            echo "Restoring history from gh-pages"
-            mkdir -p combined-results/history
-            cp -r gh-pages/history/* combined-results/history/
-          fi
 
       - name: Generate Allure Report
-        if: always()
         run: |
           allure generate combined-results -o allure-report --clean
 
-      - name: Prepare gh-pages content
-        if: always()
-        run: |
-          rm -rf gh-pages/*
-          cp -r allure-report/* gh-pages/
-
       - name: Setup Git config
-        if: always()
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
       - name: Deploy to GitHub Pages
-        if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: gh-pages
-          force_orphan: false
-          keep_files: false
-
-      - name: Upload history for future runs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-history
-          path: gh-pages/history
-          retention-days: 30
+          publish_dir: allure-report
+          force_orphan: true
