--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -53,25 +53,35 @@ services:
     networks:
       - app-network
 
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.tests
+  nginx:
+    image: nginx:1.24-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./static:/usr/share/nginx/static:ro
     depends_on:
       - api
     networks:
       - app-network
+    restart: unless-stopped
+
+  pgadmin:
+    image: dpage/pgadmin4:8
     environment:
-      APP_URL: http://localhost:8080
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_USER: test_user
-      DB_PASSWORD: test_password
-      DB_NAME: test_db
-    command: [
-        "sh", "-c",
-        "echo 'Waiting for API to start...' && go test -v ./internal/e2e_tests/..."
-      ]
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_password
+      POSTGRES_DB: test_db
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8181:80"
+    networks:
+      - app-network
+    restart: unless-stopped
+    depends_on:
+      - postgres
 
       
 networks:
